--- a/package.json
+++ b/package.json
@@ -6,21 +6,28 @@
   "bin": "./bin/cli.js",
   "scripts": {
     "start": "node src/server",
-    "dev": "nodemon src/server"
+    "dev": "nodemon src/server",
+    "test": "jest --detectOpenHandles",
+    "migrate:reset": "node ./src/tests/test_migrate.js",
+    "pretest": "npm run migrate:reset"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "2.8.5",
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "helmet": "7.0.0",
+    "jsonwebtoken": "^9.0.0",
     "pg": "8.11.0",
     "pg-hstore": "2.3.4",
     "sequelize": "6.32.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "jest": "29.5.0",
+    "supertest": "6.3.3"
   }
 }
